kubernetes/demo-app/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  to:
    kind: Service
    name: demo-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
